--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^2.27.0
   firebase_remote_config: ^4.3.17
+  appsflyer_sdk: 
+  flutter_local_notifications: ^9.8.0+1
+  overlay_support: ^2.1.0
+  app_tracking_transparency: ^2.0.4
+  firebase_messaging: ^14.2.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
